Do not reset double-click status on pointer movement

This fixes a problem where a double click on an item in Nautilus icon view did
not activate the moment when moving the pointer even slightly in between the two
clicks.

https://bugzilla.gnome.org/show_bug.cgi?id=748501